Pulled code from main branch and added changes made to index.html and style.css, as well as maps.js in order to display a new dropdown button and added in markers to test